--- a/index.html
+++ b/index.html
@@ -73,9 +73,28 @@
 
     </div>
 </section>
-<div class="footer-div">
+<section>
+    <div class="footer-div">
+        <div class="small-div">
+            <h1 class="title-7">Our Team</h1>
+            <h1 class="title-8">Meet Our Experts</h1>
+        </div>
+        <div class="pic-div">
+            <img class="first-image"src="IMAGES/Photo.svg" alt="">
+            <img class="second-image" src="IMAGES/sx.svg" alt="">
+            <img src="IMAGES/Image.svg" alt="">
+            <div>
 
-</div>
+            </div>
+            </div>
+
+        </div>
+   
+
+    </div>
+
+</section>
+
 
 
 
